--- a/app/src/main/res/layout/activity_main14.xml
+++ b/app/src/main/res/layout/activity_main14.xml
@@ -84,8 +84,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:src="@drawable/but_8"
-                    android:transitionName="3"
+                    android:src="@drawable/but_11"
+                    android:transitionName="5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
@@ -98,7 +98,7 @@
                     android:text="Name"
                     android:textColor="@color/groen"
                     android:textSize="48dp"
-                    android:transitionName="4"
+                    android:transitionName="6"
                     app:layout_constraintBottom_toBottomOf="@id/image_2"
                     app:layout_constraintEnd_toEndOf="@id/image_2"
                     app:layout_constraintStart_toStartOf="@id/image_2"
@@ -108,7 +108,7 @@
                     android:id="@+id/edit_text_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/but_10"
+                    android:background="@drawable/but_12"
                     android:gravity="center"
                     android:hint="name here"
                     android:textColor="@color/blauw"
@@ -130,8 +130,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:src="@drawable/but_8"
-                    android:transitionName="7"
+                    android:src="@drawable/but_11"
+                    android:transitionName="8"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
@@ -144,7 +144,7 @@
                     android:text="Calories"
                     android:textColor="@color/groen"
                     android:textSize="48dp"
-                    android:transitionName="8"
+                    android:transitionName="9"
                     app:layout_constraintBottom_toBottomOf="@id/image_3"
                     app:layout_constraintEnd_toEndOf="@id/image_3"
                     app:layout_constraintStart_toStartOf="@id/image_3"
@@ -154,12 +154,12 @@
                     android:id="@+id/edit_text_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/but_10"
+                    android:background="@drawable/but_12"
                     android:gravity="center"
                     android:hint="Calories here"
                     android:textColor="@color/blauw"
                     android:textColorHint="@color/wit"
-                    android:transitionName="11"
+                    android:transitionName="10"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/image_3"
                     app:layout_constraintEnd_toEndOf="parent"/>
@@ -177,20 +177,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/image_8"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:transitionName="11"/>
 
     <TextView
         android:id="@+id/text_8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_slab"
-        android:text="Add Activity To Activity"
+        android:text="Add Activity To Activitylist"
         android:textSize="20dp"
         android:textColor="@color/wit"
         app:layout_constraintStart_toStartOf="@id/image_7"
         app:layout_constraintEnd_toEndOf="@id/image_7"
         app:layout_constraintTop_toTopOf="@id/image_7"
-        app:layout_constraintBottom_toBottomOf="@id/image_7"/>
+        app:layout_constraintBottom_toBottomOf="@id/image_7"
+        android:transitionName="12"/>
 
     <ImageView
         android:id="@+id/image_8"
@@ -200,7 +202,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:transitionName="13"/>
 
     <TextView
         android:id="@+id/text_9"
@@ -213,6 +216,7 @@
         app:layout_constraintStart_toStartOf="@id/image_8"
         app:layout_constraintEnd_toEndOf="@id/image_8"
         app:layout_constraintTop_toTopOf="@id/image_8"
-        app:layout_constraintBottom_toBottomOf="@id/image_8"/>
+        app:layout_constraintBottom_toBottomOf="@id/image_8"
+        android:transitionName="14"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
