--- a/app/src/main/res/layout/activity_main11.xml
+++ b/app/src/main/res/layout/activity_main11.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity11"
+    tools:context=".MainActivity11settings"
     android:background="@drawable/background_1">
 
     <TextView
