--- a/app/src/main/res/layout/activity_main7.xml
+++ b/app/src/main/res/layout/activity_main7.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_1"
-    tools:context=".MainActivity7">
+    tools:context=".MainActivity7food">
     <TextView
         android:id="@+id/text_1"
         android:layout_width="wrap_content"
