--- a/app/src/main/res/layout/activity_main9.xml
+++ b/app/src/main/res/layout/activity_main9.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity9"
+    tools:context=".MainActivity9activity"
     android:background="@drawable/background_1">
     <TextView
         android:id="@+id/text_1"
