--- a/app/src/main/res/layout/activity_main7.xml
+++ b/app/src/main/res/layout/activity_main7.xml
@@ -57,4 +57,21 @@
         android:textColor="@color/wit"
         android:textSize="14dp"
         android:transitionName="4"/>
+
+    <LinearLayout
+        android:id="@+id/linear"
+        android:layout_width="wrap_content"
+        android:layout_height="450dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_2"
+        android:orientation="vertical"
+        android:layout_margin="30dp"
+        android:transitionName="5">
+        <ListView
+            android:id="@+id/listview_1"
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="1"/>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
