--- a/app/src/main/res/layout/activity_main9.xml
+++ b/app/src/main/res/layout/activity_main9.xml
@@ -16,7 +16,7 @@
         android:layout_marginLeft="15dp"
         android:fontFamily="@font/roboto_slab"
         android:text="A"
-        android:textSize="90dp"
+        android:textSize="90sp"
         android:transitionName="1"
         android:textColor="@color/wit"/>
 
@@ -28,7 +28,7 @@
         android:fontFamily="@font/roboto_slab"
         android:text="ctivity"
         android:textColor="@color/wit"
-        android:textSize="45dp"
+        android:textSize="45sp"
         android:transitionName="2"
         app:layout_constraintBottom_toBottomOf="@id/text_1"
         app:layout_constraintStart_toEndOf="@id/text_1" />
@@ -55,6 +55,49 @@
         android:fontFamily="@font/roboto_slab"
         android:text="dashboard"
         android:textColor="@color/wit"
-        android:textSize="14dp"
+        android:textSize="14sp"
         android:transitionName="4"/>
+
+    <LinearLayout
+        android:id="@+id/linear"
+        android:layout_width="wrap_content"
+        android:layout_height="450dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_2"
+        android:orientation="vertical"
+        android:layout_margin="30dp"
+        android:transitionName="5">
+        <ListView
+            android:id="@+id/listview_1"
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="1"/>
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/image_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/but_1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linear"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="10dp"
+        android:transitionName="6"/>
+
+    <TextView
+        android:id="@+id/text_4"
+        android:text="Add Data"
+        android:textSize="36sp"
+        android:textColor="@color/wit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto_slab"
+        app:layout_constraintStart_toStartOf="@id/image_2"
+        app:layout_constraintEnd_toEndOf="@id/image_2"
+        app:layout_constraintTop_toTopOf="@id/image_2"
+        app:layout_constraintBottom_toBottomOf="@id/image_2"
+        android:transitionName="7"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
