--- a/app/src/main/res/layout/activity_main16.xml
+++ b/app/src/main/res/layout/activity_main16.xml
@@ -66,9 +66,9 @@
         android:layout_height="300dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_2"
-        app:layout_constraintBottom_toTopOf="@id/image_4"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="40dp">
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp">
 
         <LinearLayout
             android:layout_width="match_parent"
