--- a/app/src/main/res/layout/activity_main18.xml
+++ b/app/src/main/res/layout/activity_main18.xml
@@ -17,7 +17,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="50dp"/>
+        android:layout_margin="50dp"
+        android:transitionName="1"
+        android:textColor="@color/blauw"/>
 
     <TextView
         android:id="@+id/text_2"
@@ -29,7 +31,9 @@
         android:textSize="20dp"
         app:layout_constraintTop_toBottomOf="@id/text_1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:transitionName="2"
+        android:textColor="@color/blauw"/>
 
 
     <ImageView
@@ -41,7 +45,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/image_2"
         android:layout_marginBottom="25dp"
-        android:transitionName="7"/>
+        android:transitionName="3"/>
 
     <TextView
         android:id="@+id/text_3"
@@ -55,7 +59,7 @@
         android:textSize="48dp"
         android:textColor="@color/blauw"
         android:fontFamily="@font/roboto_slab"
-        android:transitionName="8"/>
+        android:transitionName="4"/>
 
     <ImageView
         android:id="@+id/image_2"
@@ -66,10 +70,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="25dp"
-        android:transitionName="9"/>
+        android:transitionName="5"/>
 
     <TextView
-        android:id="@+id/text_6"
+        android:id="@+id/text_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@id/image_2"
@@ -80,5 +84,5 @@
         android:textSize="48dp"
         android:textColor="@color/blauw"
         android:fontFamily="@font/roboto_slab"
-        android:transitionName="10"/>
+        android:transitionName="6"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
