--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -75,8 +75,8 @@
         android:background="@drawable/but_1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/line_chart"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="25dp"
         android:transitionName="6"/>
 
     <TextView
