--- a/app/src/main/res/layout/activity_main14.xml
+++ b/app/src/main/res/layout/activity_main14.xml
@@ -112,6 +112,7 @@ android:background="@drawable/background_1">
                 android:background="@drawable/but_12"
                 android:gravity="center"
                 android:hint="name here"
+                android:inputType="text"
                 android:textColor="@color/blauw"
                 android:textColorHint="@color/wit"
                 android:transitionName="7"
@@ -158,6 +159,7 @@ android:background="@drawable/background_1">
                 android:background="@drawable/but_12"
                 android:gravity="center"
                 android:hint="Calories here"
+                android:inputType="number"
                 android:textColor="@color/blauw"
                 android:textColorHint="@color/wit"
                 android:transitionName="10"
