--- a/app/src/main/res/layout/activity_main13.xml
+++ b/app/src/main/res/layout/activity_main13.xml
@@ -111,6 +111,7 @@
                     android:background="@drawable/but_12"
                     android:gravity="center"
                     android:hint="name here"
+                    android:inputType="text"
                     android:textColor="@color/blauw"
                     android:textColorHint="@color/wit"
                     android:transitionName="7"
@@ -157,6 +158,7 @@
                     android:background="@drawable/but_12"
                     android:gravity="center"
                     android:hint="maker here"
+                    android:inputType="text"
                     android:textColor="@color/blauw"
                     android:textColorHint="@color/wit"
                     android:transitionName="10"
@@ -203,6 +205,7 @@
                     android:background="@drawable/but_12"
                     android:gravity="center"
                     android:hint="calories/100ml here"
+                    android:inputType="number"
                     android:textColor="@color/blauw"
                     android:textColorHint="@color/wit"
                     android:transitionName="13"
