--- a/app/src/main/res/layout/activity_main16.xml
+++ b/app/src/main/res/layout/activity_main16.xml
@@ -112,6 +112,7 @@
                     android:background="@drawable/but_12"
                     android:gravity="center"
                     android:hint="name here"
+                    android:inputType="text"
                     android:textColor="@color/blauw"
                     android:textColorHint="@color/wit"
                     android:transitionName="7"
@@ -157,6 +158,7 @@
                     android:background="@drawable/but_12"
                     android:gravity="center"
                     android:hint="email adress here"
+                    android:inputType="text"
                     android:textColor="@color/blauw"
                     android:textColorHint="@color/wit"
                     android:transitionName="10"
